Fix Syntax yml 05, add example 06 and update readme ec2

--- a/EC2/06_ec2_base.yml
+++ b/EC2/06_ec2_base.yml
@@ -62,6 +62,13 @@ Resources:
       ImageId: !Ref AmiId
       InstanceType: !Ref TipoInstancia
       KeyName: !Ref Ec2KeyPair
+      BlockDeviceMappings:
+        - DeviceName: /dev/sda1
+          Ebs:
+            Encrypted: true
+            VolumeSize: 40
+            VolumeType: gp3
+            DeleteOnTermination: true
       Tags:  
         - Key: "NombreInstancia"
           Value: !Ref NombreInstancia
