Add example 3 and update error templates 1 and 2

--- a/LoadBalancer/02_alb_base.yml
+++ b/LoadBalancer/02_alb_base.yml
@@ -65,7 +65,7 @@ Resources:
         - !Ref SubnetIDAZ1
         - !Ref SubnetIDAZ2
       SecurityGroups: 
-        - !Ref SGALB
+        - !Ref SecurityGroup
 
   ALBTargetGroupDefault:
     Type: 'AWS::ElasticLoadBalancingV2::TargetGroup'
